<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.surfspotcheck.surfspotcheck.Activities.ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="50dp">

             <TextView
                 android:layout_width="wrap_content"
                 android:id="@+id/txt_forgot_pass_ask"
                 android:layout_height="wrap_content"
                 android:textColor="@color/branco"
                 android:textSize="20dp"
                 android:textStyle="bold"
                 android:layout_centerHorizontal="true"
                 android:text="@string/forgot_pass_ask"
                 android:padding="20dp"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="@color/branco"
                 android:padding="10dp"
                 android:textSize="17dp"
                 android:textAlignment="center"
                 android:layout_centerHorizontal="true"
                 android:text="@string/txt_forgot_pass"
                 android:id="@+id/txt_forgot_pass"
                 android:layout_below="@id/txt_forgot_pass_ask"/>

             <EditText
                 android:layout_margin="20dp"
                 android:hint="@string/prompt_email"
                 android:inputType="textEmailAddress"
                 android:textColorHint="@color/branco"
                 android:textColor="@color/branco"
                 android:id="@+id/txt_email"
                 android:layout_below="@id/txt_forgot_pass"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />

             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:background="@color/colorAccent"
                 android:layout_below="@id/txt_email"
                 android:textColor="@color/branco"
                 android:text="@string/reset_pass"
                 android:id="@+id/btnResetPass">
             </Button>

             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/btnResetPass"
                 android:layout_margin="10dp"
                 android:padding="8dp"
                 android:clickable="true"
                 android:background="@drawable/bg_txt_btn"
                 android:layout_centerHorizontal="true"
                 android:text="@string/voltar"
                 android:id="@+id/txt_voltar"
                 android:textColor="@color/branco"/>
         </RelativeLayout>
    </RelativeLayout>
</ScrollView>
