<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="15dp"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:minHeight="100dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img"
            android:src="@mipmap/sun"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/img"
            android:text="@string/max"
            android:textColor="@color/secondary_text"/>

        <TextView
            android:id="@+id/temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="0º"
            android:textColor="@color/primary_text"
            android:layout_toRightOf="@id/max"/>

        <TextView
            android:id="@+id/min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/max"
            android:layout_marginTop="5dp"
            android:textColor="@color/secondary_text"
            android:layout_toRightOf="@id/img"
            android:text="@string/min"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:id="@+id/data_semana"
            android:layout_alignParentRight="true"
            android:textColor="@color/primary_text"
            android:text="@string/data_semana"
            android:layout_toRightOf="@id/temp_max"
            />

        <TextView
            android:id="@+id/temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/temp_max"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="0º"
            android:textColor="@color/primary_text"
            android:layout_toRightOf="@+id/min"/>

        <TextView
            android:id="@+id/descricao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/min"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/img"
            android:textColor="@color/primary_text"
            android:text="@string/descricao"/>
    </RelativeLayout>

</LinearLayout>