<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context="com.surfspotcheck.surfspotcheck.Activities.LoginEmail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:layout_margin="60dp"
            android:id="@+id/imgLogin"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:padding="20dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/imgLogin">

            <EditText
                android:id="@+id/txt_email"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/branco"
                android:textColor="@color/branco"
                android:padding="10dp"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/txt_pass"
                android:layout_below="@id/txt_email"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:hint="@string/prompt_pass"
                android:inputType="textPassword"
                android:textColorHint="@color/branco"
                android:textColor="@color/branco"
                android:padding="10dp"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_pass"
                android:id="@+id/txt_forgot_pass"
                android:textColor="@color/branco"
                android:padding="10dp"
                android:text="@string/forgot_pass"
                android:background="@drawable/background_textview"
                android:clickable="true"
                android:layout_centerHorizontal="true"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_below="@id/txt_forgot_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/branco"
                android:text="@string/login"
                android:background="@color/colorAccent"
                android:layout_margin="20dp"/>
        </RelativeLayout>
    </RelativeLayout>

</ScrollView>
