<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.surfspotcheck.surfspotcheck.Fragments.ClimaTempoFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rel_clima_tempo"
        android:visibility="visible"
        android:layout_height="match_parent"
        android:layout_below="@+id/rel_progress_bar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="210dp"
                android:elevation="5dp"
                android:padding="20dp"
                android:background="@color/bg"
                android:visibility="visible"
                android:id="@+id/today_clima_tempo">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="35dp"
                    android:textColor="@color/branco"
                    android:id="@+id/cidade"
                    android:text="@string/city"
                    android:layout_centerHorizontal="true"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cidade"
                    android:textColor="@color/branco"
                    android:textSize="16dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/data"
                    android:layout_centerHorizontal="true"
                    android:text="@string/data_semana"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:id="@+id/relative_img_temp"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/data">

                    <ImageView
                        android:layout_width="45dp"
                        android:layout_height="45dp"

                        android:id="@+id/img"
                        android:src="@mipmap/sun"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/img"
                        android:id="@+id/temp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/temp"
                        android:textColor="@color/branco"
                        android:layout_marginTop="5dp"
                        android:textSize="32dp"/>
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/descricao"
                    android:textColor="@color/branco"
                    android:textSize="18dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/descricao"
                    android:layout_below="@id/relative_img_temp"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/rel_umidade"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/descricao">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/branco"

                        android:text="@string/umidade"
                        android:textSize="15dp"
                        android:id="@+id/lbl_umidade"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/txt_umidade"
                        android:textColor="@color/branco"
                        android:layout_marginLeft="3dp"
                        android:layout_toRightOf="@id/lbl_umidade"
                        android:textSize="15dp"
                        android:text="80%" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_below="@id/rel_umidade"
                    android:id="@+id/rel_ventos"
                    android:layout_centerInParent="true">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:textColor="@color/branco"
                        android:textSize="15dp"
                        android:id="@+id/lbl_velocidade_vento"
                        android:text="@string/velocidade_vento"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2dp"
                        android:layout_centerHorizontal="true"
                        android:textColor="@color/branco"
                        android:layout_marginTop="2dp"
                        android:textSize="15dp"
                        android:layout_toRightOf="@id/lbl_velocidade_vento"
                        android:id="@+id/txt_vento"
                        android:text="14.00 km/h"/>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/today_clima_tempo">

                <ListView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:dividerHeight="2dp"
                    android:id="@+id/listview" />

            </RelativeLayout>
        </RelativeLayout>

    <RelativeLayout
            android:visibility="gone"
            android:id="@+id/rel_progress_bar"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"/>
        </RelativeLayout>

</RelativeLayout>
